# mitseagrantauv

./: README.md  convert_to_rpy.py  deg145.HEIC  deg234.HEIC  deg324.HEIC  deg55.HEIC  heading.HEIC  processing_megnetometer_calibration.HEIC  razorReadme.md  razor_imu_M0.txt
CAMERA_ANGLE/CameraAngel/: CameraAngelReadMe.md  CameraAngleReadMe.md
EJML/main/ejml-core/src/org/ejml/: EjmlVersion.java
EJML/main/ejml-core/src/org/ejml/data/: CMatrixRMaj.java  FMatrixRBlock.java  FMatrixRMaj.java
EJML/main/ejml-core/src/org/ejml/ops/: ConvertFArrays.java
EJML/main/ejml-fsparse/src/org/ejml/sparse/csc/: CommonOps_FSCC.java  RandomMatrices_FSCC.java
EJML/main/ejml-fsparse/src/org/ejml/sparse/csc/misc/: ImplCommonOps_FSCC.java  TriangularSolver_FSCC.java
EJML/main/ejml-fsparse/src/org/ejml/sparse/csc/mult/: ImplSparseSparseMult_FSCC.java
EJML/main/ejml-fsparse/test/org/ejml/sparse/csc/: TestCommonOps_FSCC.java  TestMatrixFeatures_FSCC.java  TestNormOps_FSCC.java  TestRandomMatrices_FSCC.java
EJML/main/ejml-fsparse/test/org/ejml/sparse/csc/decomposition/: GenericDecompositionTests_FSCC.java
EJML/main/ejml-fsparse/test/org/ejml/sparse/csc/linsol/: GenericLinearSolverSparseTests_FSCC.java
EJML/main/ejml-fsparse/test/org/ejml/sparse/csc/misc/: TestApplyFillReductionPermutation_FSCC.java  TestColumnCounts_FSCC.java  (+2 more)
EJML/main/ejml-fsparse/test/org/ejml/sparse/triplet/: TestMatrixFeatures_FSTL.java  TestRandomMatrices_FSTL.java
EJML/main/ejml-simple/: build.gradle
PCLPassThroughFilter/: passthrough.cpp
Philos/: README.md
Server/iNetNMEAClient/: NetNMEAClient.cpp
Server/iNetNMEAServer/: NMEAServer.h  NetNMEAServer.cpp  NetNMEAServer.h
VRX/: Sensor.md  sensor_config.xacro  sensor_config.yaml
ais/: 0304.sh  0305.sh  2020-03-04_150km.csv  2020-03-25_3km.csv  202003.csv  README.md  ]\  build.sh  csvfilter.cpp  deleteM.bash  deleteM.vim  hh.bash  ntuais_filter  ntuais_filter.cpp  ntuais_filter_1.0.cpp  ntuais_filter_2  ntuais_filter_2.0.cpp  ntuais_filter_2.0.h  ntuais_filter_Main_2.0.cpp  result.cpp
ais/AIS_gui/: CHe1_5K.csv  count.py  countWithoutMoving.py  datesplit.py  gui.py  range.py  rangesplit.py  split.py  target.html  timesplit.py
ais/AIS_gui/testdir/: Combobox.py  cplines.py  dict.py  dtime.py  googleMap.py  pathselect.py  read.py  removelast.py  tabs.py  testsplit.py  tkclass.py
ais/aisserial/: ais_serial  ais_serial.c  aisserialRead  aisserialRead.c  aisserialReadW  aisserialReadW.c
ais/ntuais_filter_2/: ntuais_filter_2.0.h  ntuais_filter_Main_2.0.cpp
ais/ntuais_filter_3/: rawdatasorting  rawdatasorting.cpp
cluster_extraction/: cluster_extraction.cpp
filter/: CMakeLists.txt  passthrough.cpp
pcl/devel/: .catkin  local_setup.sh
pcl/devel/include/adaptive_clustering/: ClusterArray.h
pcl/devel/include/dataprocess/: ClusterArray.h
pcl/devel/lib/adaptive_clustering/: adaptive_clustering
pcl/devel/lib/dataprocess/: client  cluster  cluster_extraction  downsampling  eucluster  filter  listen  listen2  passthrough  remove_outliers  segmentation  talk
pcl/devel/lib/passthrough/: cluster  filter2  listen  listen2  listener
pcl/devel/lib/pkgconfig/: adaptive_clustering.pc  dataprocess.pc  nmea_msgs.pc  passthrough.pc
pcl/devel/lib/python2.7/dist-packages/adaptive_clustering/msg/: _ClusterArray.py
pcl/devel/lib/python2.7/dist-packages/dataprocess/msg/: _ClusterArray.py
pcl/devel/lib/python2.7/dist-packages/nmea_msgs/msg/: _Gpgga.py  _Gpgsa.py  _Gpgsv.py  _GpgsvSatellite.py  _Gprmc.py  _Sentence.py
pcl/devel/share/adaptive_clustering/cmake/: adaptive_clustering-msg-extras.cmake  adaptive_clustering-msg-paths.cmake  adaptive_clusteringConfig.cmake
pcl/devel/share/common-lisp/ros/adaptive_clustering/msg/: ClusterArray.lisp
pcl/devel/share/common-lisp/ros/dataprocess/msg/: ClusterArray.lisp  _package.lisp  _package_ClusterArray.lisp  dataprocess-msg.asd
pcl/devel/share/dataprocess/cmake/: dataprocess-msg-paths.cmake  dataprocessConfig.cmake
pcl/devel/share/gennodejs/ros/adaptive_clustering/msg/: ClusterArray.js
pcl/devel/share/gennodejs/ros/dataprocess/msg/: ClusterArray.js
pcl/devel/share/gennodejs/ros/nmea_msgs/msg/: _index.js
pcl/devel/share/nmea_msgs/cmake/: nmea_msgs-msg-paths.cmake  nmea_msgsConfig.cmake
pcl/devel/share/passthrough/cmake/: passthrough-msg-paths.cmake  passthroughConfig.cmake
pcl/devel/share/roseus/ros/adaptive_clustering/: manifest.l
pcl/devel/share/roseus/ros/adaptive_clustering/msg/: ClusterArray.l
pcl/devel/share/roseus/ros/dataprocess/: manifest.l
pcl/devel/share/roseus/ros/dataprocess/msg/: ClusterArray.l
pcl/devel/share/roseus/ros/nmea_msgs/: manifest.l
pcl/devel/share/roseus/ros/passthrough/: manifest.l
pcl/src/: nmea_client.py
pcl/src/adaptive_clustering/: README.md  package.xml
pcl/src/adaptive_clustering/src/: adaptive_clustering.cpp
pcl/src/dataprocess/: CMakeLists.txt  package.xml
pcl/src/dataprocess/include/passthrough/: crop.h
pcl/src/dataprocess/launch/: dataprocess.launch
pcl/src/dataprocess/src/: Euclidean_cluster.cpp  README.md  client.cpp  cluster.cpp  clusterposes  downsampling.cpp  filter.cpp  listen.cpp  passthrough.cpp  radar.md  radar.txt  radar_pose_client.cpp  remove_outliers.cpp  segmentation.cpp
pclExam/: CMakeLists.txt  pcl_visualizer_demo.cpp
pcl_accoustics/: randomCubePcl.py  rospy_Pcl_example.py
pclphilo/devel/: .catkin  local_setup.sh  setup.sh
pclphilo/devel/lib/passthrough/: cluster  downsampling  filter  listen  listen2  segmentation  talk  talker
pclphilo/devel/lib/pkgconfig/: passthrough.pc  pclprocessing.pc
pclphilo/devel/share/passthrough/cmake/: passthrough-msg-paths.cmake  passthroughConfig.cmake
pclphilo/devel/share/pclprocessing/cmake/: pclprocessingConfig.cmake
pclphilo/devel/share/roseus/ros/passthrough/: manifest.l
pclphilo/src/passthrough/: CMakeLists.txt  package.xml
pclphilo/src/passthrough/src/: cluster.cpp  crop.cpp  downsampling.cpp  filter.cpp  filterPCL2.cpp  listen2.cpp  point_cloud_demo.cpp  talk.cpp
sockettest/: client.c  server  server.c
visual/: README.md
voxel_grid/: voxel_grid.cpp
(+10 files in other folders)
